--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,39 @@
+aiohttp==3.9.5
 aiolimiter==1.1.0
+aiosignal==1.3.1
+annotated-types==0.6.0
 anyio==4.3.0
 APScheduler==3.10.4
+async-timeout==4.0.3
+attrs==23.2.0
+Brotli==1.1.0
 cachetools==5.3.3
 certifi==2024.2.2
+charset-normalizer==3.3.2
+distro==1.9.0
 exceptiongroup==1.2.1
+frozenlist==1.4.1
+g4f==0.3.1.0
 h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.0
 idna==3.7
+multidict==6.0.5
+nest-asyncio==1.6.0
+openai==1.29.0
+pycryptodome==3.20.0
+pydantic==2.7.1
+pydantic_core==2.18.2
 python-dateutil==2.9.0.post0
 python-telegram-bot[ext]==21.1.1
 pytz==2024.1
+requests==2.31.0
 six==1.16.0
 sniffio==1.3.1
 telegram==0.0.1
 tornado==6.4
+tqdm==4.66.4
 typing_extensions==4.11.0
 tzlocal==5.2
+urllib3==2.2.1
+yarl==1.9.4
