--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ pytz==2024.1
 requests==2.31.0
 six==1.16.0
 sniffio==1.3.1
+telebot @ git+https://github.com/mhewedy/telebot@566c0276f096850f3de084db627954fa5d8d5ac2
 telegram==0.0.1
 tornado==6.4
 tqdm==4.66.4
