--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ charset-normalizer==3.3.2
 distro==1.9.0
 exceptiongroup==1.2.1
 frozenlist==1.4.1
-g4f==0.3.1.3
+g4f==0.3.1.9
 h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.0
@@ -38,3 +38,4 @@ typing_extensions==4.11.0
 tzlocal==5.2
 urllib3==2.2.1
 yarl==1.9.4
+diskcache==5.6.3
