--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ charset-normalizer==3.3.2
 distro==1.9.0
 exceptiongroup==1.2.1
 frozenlist==1.4.1
-g4f==0.3.1.9
+g4f~=0.3.1.9
 h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.0
@@ -30,7 +30,8 @@ pytz==2024.1
 requests==2.31.0
 six==1.16.0
 sniffio==1.3.1
-telebot @ git+https://github.com/mhewedy/telebot@76bf72d94ee57809b68d27de1109e76309b6623e
+telebot~=0.0.8
+telebot @ git+https://github.com/mhewedy/telebot@e60074067bfefe3e8aff0c3978370d5d0d3e0411
 telegram==0.0.1
 tornado==6.4
 tqdm==4.66.4
