support multi-tenant (ie multi chat groups)

--- a/fly.toml
+++ b/fly.toml
@@ -8,7 +8,7 @@ primary_region = 'cdg'
 
 [build]
   builder = 'paketobuildpacks/builder:base'
-  buildpacks = ["gcr.io/paketo-buildpacks/python"]
+  buildpacks = ["paketo-buildpacks/python"]
 
 [env]
   PORT = '0'
